Bug 167379 - Fileopen DOTX: Text not positioned where needed
Summary: Fileopen DOTX: Text not positioned where needed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.2.0 target:25.8.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Floatingtable
  Show dependency treegraph
 
Reported: 2025-07-04 11:40 UTC by Timur
Modified: 2025-07-14 19:37 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
DOTX (33.50 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.template)
2025-07-04 11:40 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2025-07-04 11:40:26 UTC
Created attachment 201653 [details]
DOTX

Opem sample DOTX. 
In MSO, text D is in line with text C, in LO it is below. 

Started from 7.6:

commit 1c99616f86f7d5b83b91edc225fc95fec227d710	[log]
author	Miklos Vajna <vmiklos@collabora.com>	Tue May 02 08:15:33 2023 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	Tue May 02 16:35:52 2023 +0200
sw floattable, crashtesting: fix PDF export of forum-mso-en3-26783.docx
Comment 1 Commit Notification 2025-07-10 12:44:34 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/441aed20b95ee40dec1df72fb8e8167d0e48c0c4

tdf#167379 sw floattable: make dummy paragraph from DOCX import less visible

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Miklos Vajna 2025-07-10 12:45:23 UTC
Export side still needs fixing.
Comment 3 Commit Notification 2025-07-11 06:40:14 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/3d3d51cd630ab45a61790be27e930e98c3e749e6

tdf#167379 sw floattable: make dummy paragraph from DOCX import less visible

It will be available in 25.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-07-11 18:13:27 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c9851022d102a2abfc16c033c0249f24573300e7

tdf#167379 sw floattable: ignore dummy anchor nodes in DOCX export

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-07-14 19:37:52 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/d7212eeeb2ec8a2072a33063e81ee4b27af8f031

tdf#167379 sw floattable: ignore dummy anchor nodes in DOCX export

It will be available in 25.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.