tdf#167379 sw floattable: make dummy paragraph from DOCX import less visible

Open the bugdoc, the text C and D appears to have the same vertical
position in Word, but D is shifted down in Writer.

What happens is that since commit
01ad8ec4bb5425446e95dbada81de435646824b4 (sw floattable: fix lost tables
around a floating table from DOCX, 2023-06-05), an empty paragraph is
inserted between two floating tables immediately following each other,
to have a suitable anchor point for all floating tables. But it wasn't
considered that the anchor point takes vertical space, which has an
impact on layout.

Fix the problem by keeping the empty paragraph in the model & layout
(the split fly frame needs those), but setting the paragraph properties
(spacing, line spacing) in a way that the created text frame has 0
height, so it has no negative impact on the position of the text after
the text frame.

This is similar to what the DOC import does in
WW8TabDesc::CreateSwTable(), though there we set the font size of the
paragraph to 1pt, which improves the layout but still has a small
impact. An alternative I considered is to set the "hidden" character
property on the text node's item set, but that would create no text
frame at all, so we would again have no anchor point for the floating
table, so that would not work.

Change-Id: Iceb2f51ad42028434822cb9c0701a7e6d6545845
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187619
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>